@@ -24,9 +24,9 @@ INSTALL = @INSTALL@
 # Locations
 #
 
-VPOPMAIL_ETCDIR=@VPOPMAIL_DIR_ETC@
-VPOPMAIL_MODULEDIR=@VPOPMAIL_DIR_LIB@
-VPOPMAIL_AUTHMODULE=$(VPOPMAIL_ETCDIR)/vpopmail.authmodule
+VPOPMAIL_ETCDIR=$(DESTDIR)@VPOPMAIL_DIR_ETC@
+VPOPMAIL_MODULEDIR=$(DESTDIR)@VPOPMAIL_DIR_LIB@
+VPOPMAIL_AUTHMODULE=$(DESTDIR)$(VPOPMAIL_ETCDIR)/vpopmail.authmodule
 
 #
 # Ownership
